# PhotoLab

./: README.md
src/: CMakeLists.txt  Makefile  PhotoLab_v1.0_info.texi  main.cc
src/controller/: controller.h
src/model/: filter.cc  filter.h  model.cc  model.h
src/model/image/: color.cc  color.h  iimage.h  image.cc  image.h  rgb.h
src/tests/: tests.cc
src/view/: imagewidget.cc  imagewidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui  matrixwindow.cc  matrixwindow.h  matrixwindow.ui
